responsive, api manifest

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,6 +39,6 @@
   }
 
   .menu li.active > div:after {
-    @apply content-[''] block absolute right-0 h-full w-1 bg-yellow-500 h-full;
+    @apply content-[''] block absolute -right-0.5 h-full w-1 bg-yellow-500 h-full py-2 rounded-full;
   }
 }
